--- a/src/components/NavBar/navBar.css
+++ b/src/components/NavBar/navBar.css
@@ -1,10 +1,3 @@
-.navBar {
-  overflow-x: auto;
-  overflow-y: hidden;
-  width: auto;
-  height: 50px;
-  padding: 10px;
-}
 .list-scroll {
   font-size: small;
   margin: 5px;
@@ -20,4 +13,8 @@
 
 .list-scroll li a {
   color: #6c757d;
+}
+
+.list-scroll li a:hover {
+  color: black;
 }
