:sparkles: cards general complete
cards general complete

--- a/src/components/CardGeneral/CardGeneral.css
+++ b/src/components/CardGeneral/CardGeneral.css
@@ -1,9 +1,109 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 .Card {
   display: flex;
-  height: 126px;
+  justify-content: space-between;
+  margin-bottom: 24px;
   width: 60%;
+  position: relative;
+}
+.contentCard {
+  width: 75%;
+  text-align: left;
+}
+.imgCard {
+  width: 80px;
+  height: 80px;
+  object-fit: cover;
 }
 
-.imgCard {
-  width: 150px;
+.title {
+  font-size: 1rem;
+  max-height: 40px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-weight: 600;
+  letter-spacing: -0.17px;
+  transform: translateY(0.96px);
+  color: rgba(0, 0, 0, 0.84);
+  fill: rgba(0, 0, 0, 0.84);
+  margin-bottom: 4px;
+  cursor: pointer;
+  padding-bottom: 16px;
+}
+
+.subtitle {
+  font-size: 1rem;
+  margin: 0;
+  display: none;
+}
+.sectionExtra {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 12px;
+  align-items: flex-end;
+}
+
+.infoExtra p {
+  font-size: 0.9rem;
+  color: rgba(0, 0, 0, 0.84);
+}
+
+.cardBoot {
+  display: flex;
+  flex-direction: row;
+}
+
+svg {
+  color: #747474;
+}
+
+h5 {
+  color: rgba(0, 0, 0, 0.54);
+  font-weight: 400;
+}
+@media only screen and (min-width: 1024px) {
+  .Card {
+    max-width: 680;
+    height: 143px;
+    margin-bottom: 35px;
+  }
+  .imgCard {
+    display: block;
+    line-height: 20px;
+    height: 100%;
+    width: 152px;
+  }
+  .title {
+    font-size: 1.3rem;
+    max-height: 50px;
+    padding: 0px;
+    font-weight: 700;
+    padding-right: 10px;
+  }
+  .subtitle {
+    margin-top: 2px;
+    display: block;
+    height: 40px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    padding-right: 15px;
+  }
+  .contentCard {
+    width: 75%;
+  }
+}
+
+@media only screen and (max-width: 504px) {
+  .Card {
+    width: 100%;
+    flex: 1 1 auto;
+  }
+  .imgCard {
+    width: 80px;
+    height: 80px;
+  }
 }
