--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
 .App {
   font-size: 1rem;
+
+  margin: 0px 3%;
+}
+
+@media only screen and (min-width: 1024px) {
+  .App {
+    margin: 0px 10%;
+  }
 }
