--- a/src/components/NavBar/navBar.css
+++ b/src/components/NavBar/navBar.css
@@ -1,5 +1,5 @@
 .NavBarSticky {
-  width: 80vw;
+  width: 90vw;
   height: 100%;
   font-size: 14px;
   margin: 10px 0px;
@@ -19,4 +19,10 @@
   padding: 0%;
   display: flex;
   justify-content: center;
+}
+
+@media only screen and (min-width: 1024px) {
+  .NavBarSticky {
+    width: 80vw;
+  }
 }
