--- a/src/components/NavBar/navBar.css
+++ b/src/components/NavBar/navBar.css
@@ -1,22 +1,28 @@
 .NavBarSticky {
-  width: 90vw;
   height: 100%;
   font-size: 14px;
   margin: 0px;
   list-style: none;
   padding: 10px;
-  display: inline-block;
+  position: -webkit-sticky;
+  position: sticky;
+  z-index: 1;
+  top: 0;
+  max-height: 45px;
 }
 
-.liItem {
-  width: 150px;
-  margin: 0px;
-  padding: 0px;
+.MenuItem {
+  margin: -5px 10px;
+  padding: 0 20px;
+  user-select 
 }
-.liItem a {
+.MenuItem a {
   color: #6c757d;
   text-decoration-line: none;
   padding: 0%;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
+}
+
+.arrow-prev {
 }
