--- a/src/screens/Home/Home.css
+++ b/src/screens/Home/Home.css
@@ -7,3 +7,11 @@
     margin: 0px 10%;
   }
 } */
+p.see {
+  color: #03a87c;
+  display: block;
+  border-bottom: 1px solid #d9d9d9;
+  padding-bottom: 0.5rem;
+  margin-bottom: 1.5rem;
+  text-align: end;
+}
