--- a/src/components/CardGeneral/CardGeneral.css
+++ b/src/components/CardGeneral/CardGeneral.css
@@ -8,8 +8,15 @@
   justify-content: space-between;
   margin: 0;
   margin-bottom: 24px;
-  width: 60%;
+
   position: relative;
+}
+.popular {
+  width: 70%;
+  padding-left: 10%;
+}
+.home {
+  width: 100%;
 }
 .contentCard {
   width: 75%;
@@ -57,6 +64,11 @@
   display: flex;
   flex-direction: row;
 }
+p.date {
+  color: rgba(0, 0, 0, 0.54);
+  font-weight: 400;
+  font-size: 0.8rem;
+}
 
 svg {
   color: #747474;
@@ -82,11 +94,12 @@ h5 {
     font-size: 1.3rem;
     max-height: 50px;
     padding: 0px;
+    padding-top: 5px;
     font-weight: 700;
     padding-right: 10px;
   }
   .subtitle {
-    font-size: 0.9rem;
+    font-size: 0.88rem;
     margin-top: 7px;
     display: block;
     height: 35px;
@@ -97,6 +110,9 @@ h5 {
   }
   .contentCard {
     width: 75%;
+  }
+  .sectionExtra {
+    padding-top: 10px;
   }
 }
 
