--- a/src/screens/Home/Home.css
+++ b/src/screens/Home/Home.css
@@ -1,18 +1,38 @@
-/* .hi {
-  margin: 0px 3%;
+.recentSection {
+  margin-top: 15px;
 }
 
-@media only screen and (min-width: 1024px) {
-  .hi {
-    margin: 0px 10%;
-  }
-} */
 p.see {
   color: #03a87c;
   display: block;
   border-bottom: 1px solid #d9d9d9;
-  padding-bottom: 0.5rem;
-  margin-bottom: 1.5rem;
-  text-align: end;
+  font-size: 0.8rem;
+  text-align: start;
   cursor: pointer;
+  padding: 1rem 0rem;
+  margin-bottom: 2rem;
+}
+.rowGeneral {
+  margin-top: 5%;
+}
+
+.cardGeneral {
+  width: 100%;
+}
+.middleSection {
+  width: 100%;
+}
+@media only screen and (min-width: 1024px) {
+  p.see {
+    padding-bottom: 1rem;
+    margin-bottom: 1.5rem;
+    text-align: end;
+    font-size: 0.9rem;
+  }
+  .cardGeneral {
+    width: 60%;
+  }
+  .middleSection {
+    width: 40%;
+  }
 }
