--- a/src/screens/PostById/Post.css
+++ b/src/screens/PostById/Post.css
@@ -1,6 +1,8 @@
 .containerPost {
-  width: 60%;
-  margin: auto;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 5%;
 
   text-align: left;
 }
@@ -87,12 +89,26 @@ footer div p {
 }
 .foot {
   display: flex;
+  flex-direction: column;
   padding-bottom: 10px;
   margin: 10px;
   border-bottom: 1px solid whitesmoke;
 }
 
 footer div img {
-  width: 20%;
+  width: 50%;
   padding: 30px;
+}
+
+@media only screen and (min-width: 1024px) {
+  .foot {
+    flex-direction: row;
+  }
+  footer div img {
+    width: 20%;
+  }
+  .containerPost {
+    width: 60%;
+    padding-left: 0%;
+  }
 }
