--- a/src/screens/Home/Home.css
+++ b/src/screens/Home/Home.css
@@ -90,4 +90,16 @@ p.see {
     top: 0;
     z-index: 1;
   }
+  .footerhome {
+    word-spacing: 5px;
+    margin: 0;
+    margin-top: 50px;
+    padding: 0;
+    padding-top: 20px;
+    width: 85%;
+    background-color: transparent;
+    color: #7d7878;
+    border-top: 1px solid #dfddddd2;
+    font-size: 0.9rem;
+  }
 }
