--- a/src/components/NavBar/navBar.css
+++ b/src/components/NavBar/navBar.css
@@ -8,8 +8,9 @@
   list-style: none;
   padding: 10px;
   display: inline-block;
-  z-index: 1;
+  z-index: 10;
   top: 0;
+  background-color: #fff;
 }
 .mar {
   margin-left: -109px;
