--- a/src/screens/Home/Home.css
+++ b/src/screens/Home/Home.css
@@ -53,21 +53,6 @@ p.see {
   width: 100%;
   height: 100%;
 }
-/* .make-Nav-sticky {
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0;
-  padding: 0 15px;
-}
-
-.sidebarNav-item {
-  position: absolute;
-  top: 35px;
-  left: 0;
-  z-index: 5;
-  width: 100%;
-  height: 100%;
-} */
 
 @media only screen and (min-width: 1024px) {
   p.see {
@@ -81,6 +66,9 @@ p.see {
   }
   .middleSection {
     width: 40%;
+  }
+  .recentSection {
+    display: flex;
   }
   .asidecol {
     display: inline;
